--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,60 @@
+absl-py==2.3.0
+ale-py==0.11.1
 astroid==3.0.0
 cloudpickle==3.1.1
 cmake==3.27.2
 colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
 dill==0.3.7
 distlib==0.3.8
 Farama-Notifications==0.0.4
 filelock==3.13.0
+fonttools==4.58.4
 fsspec==2023.10.0
-gymnasium==1.2.0
+grpcio==1.73.1
+gymnasium==1.1.1
 iniconfig==2.0.0
 isort==5.12.0
 Jinja2==3.1.2
+kiwisolver==1.4.8
+Markdown==3.8.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.10.3
 mccabe==0.7.0
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.2
 numpy==1.25.2
+opencv-python==4.11.0.86
 packaging==23.1
+pandas==2.3.0
+pillow==11.3.0
 platformdirs==3.11.0
 pluggy==1.3.0
+protobuf==6.31.1
+psutil==7.0.0
 pyboy==2.6.0
+pygame==2.6.1
+Pygments==2.19.2
 pylint==3.0.1
+pyparsing==3.2.3
 PySDL2==0.9.17
 pysdl2-dll==2.32.0
 pytest==7.4.2
-sympy==1.12
+python-dateutil==2.9.0.post0
+pytz==2025.2
+rich==14.0.0
+six==1.17.0
+stable_baselines3==2.6.0
+sympy==1.14.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 tomlkit==0.12.1
-torch==2.1.0
-typing_extensions==4.8.0
+torch==2.7.1
+tqdm==4.67.1
+typing_extensions==4.14.0
+tzdata==2025.2
 virtualenv==20.26.1
+Werkzeug==3.1.3
